--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,11 @@ before_script:
 - sudo apt-get install python-imaging
 install:
 - sudo pip install -r requirements.txt --use-mirrors
+- sudo pip install WebTest
+- sudo pip install nose
 script:
 - git clone https://github.com/andrewbeng89/tictactoe.git deploy
+- nosetests deploy/test.py
 after_success:
 - google_appengine/appcfg.py --oauth2_refresh_token=$MY_GAE_TOKEN update deploy/
 env:
