--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@
 # in this project's lib/ directory.  The `lib` directory is added to `sys.path`
 # by `appengine_config.py`.
 bottle==0.11.6
+WebTest
+nose
+nosegae
