--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ before_script:
 - echo "y"|sudo pip uninstall nose
 install:
 - sudo pip install -r requirements.txt --use-mirrors
-- sudo easy_install -U WebTest
-- sudo easy_install -U nose
-- sudo easy_install -U nosegae
+- sudo pip install nose
+- sudo pip install WebTest
+- sudo pip install nosegae
 script:
 - git clone https://github.com/andrewbeng89/tictactoe.git deploy
 - cd deploy
