--- a/app.yaml
+++ b/app.yaml
@@ -38,18 +38,26 @@ handlers:
 #  version: latest
 
 - url: /
-  static_files: public/index.html
-  upload: public/index.html
+  static_files: public/mastermind.html
+  upload: public/mastermind.html
+  
 - url: /api/.*
   script: main.bottle
+  
 - url: /css/(.*\.css)
   mime_type: text/css
-  static_files: public/css/\1
-  upload: public/css/(.*\.css)
+  static_files: css/\1
+  upload: css/(.*\.css)
+  
 - url: /js/(.*\.js)
   mime_type: text/javascript
-  static_files: public/js/\1
-  upload: public/js/(.*\.js)
+  static_files: js/\1
+  upload: js/(.*\.js)
+  
+- url: /Image/(.*\.(ico|jpg|png|gif))
+  static_files: Image/\1
+  upload: Image/.*\.(ico|jpg|png|gif)
+  
 - url: /pages/(.*\.html)
   mime_type: text/html
   static_files: public/pages/\1
